started the content

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -2,6 +2,12 @@ body {
     background-color: #F2FFEA;
 }
 
+body::before, body::after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
 .welcome-logo {
     height: 99vh;
     display: flex;
@@ -46,5 +52,86 @@ body {
                 font-size: 55px;
             }
         }
+    }
+}
+
+.scroll-content {
+
+    display: flex;
+    flex-direction: row;
+    
+    width: 100%;
+    height: 100%;
+
+    .right-s-content {
+
+        overflow-x: hidden;
+        overflow-y: hidden;
+
+        height: 100vh;
+        position: sticky;
+        display: flex;
+        flex-direction: column;
+        top: 0;
+        right: 0;
+        left: 100%;
+        width: 330px;
+
+        .right-s-background {
+            background-image: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+            background-size: 40%;
+            padding-bottom: 70px;
+
+            .right-s-box {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                margin-top: 130px;
+
+                .right-s-text {
+                    background-color: #F2FFEA;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    border-radius: 10px;
+                    width: 280px;
+
+                    img {
+                        width: 129px;
+                        height: 163px;
+                        object-fit: contain;
+                        background-color: white;
+                        border-radius: 99px;
+                    }
+
+                    p {
+                        margin-bottom: 0px;
+                        margin-top: 10px;
+                        margin-left: 10px;
+                        margin-right: 10px;
+                        font-size: 15px;
+                    }
+
+                    .right-s-info {
+                        padding-bottom: 25px;
+                        margin-top: 25px;
+
+                        span {
+                            font-weight: bold;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    .left-s-content {
+        margin-left: 0px;
+        margin-right: 0px;
+        margin-top: 130px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
