--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,5 +1,7 @@
 body {
     background-color: #F2FFEA;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 body::before, body::after {
@@ -9,13 +11,21 @@ body::before, body::after {
 }
 
 .welcome-logo {
-    height: 99vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+
     background-image: linear-gradient(to bottom, rgba(242, 255, 234, 0.75), rgba(242, 255, 234, 0.75)),url(/MEDIA/background/backgroundleafes.png);
     background-size: 22%;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .welcome-background {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 
     .framed-logo {
         display: flex;
@@ -53,104 +63,88 @@ body::before, body::after {
             }
         }
     }
+
 }
 
-.scroll-content {
+.main-content {
+
+    background-color: #F2FFEA;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
 
     color: #162D06;
 
-    display: flex;
-    flex-direction: row;
-    
-    width: 100%;
-    height: 100%;
-
-    .right-s-content {
+    .un-scroll-content {
 
         overflow-x: hidden;
         overflow-y: hidden;
-
-        height: 100vh;
+    
+        min-height: 100vh;
         position: sticky;
         display: flex;
         flex-direction: column;
         top: 0;
         right: 0;
         left: 100%;
-
-        .right-s-background {
-            background-image: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65)),url(/MEDIA/background/backgroundleafes.png);
-            background-size: 40%;
-            padding-bottom: 70px;
-            width: 300px;
-            margin-right: -8px;
-
-            .right-s-box {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                margin-top: 130px;
-
-                .right-s-text {
-                    background-color: #F2FFEA;
+        min-width: 300px;
+        margin-right: 0px;
+        background-color: #d5eac7;
+    
+        .right-s-content {
+    
+            height: 100vh;
+            position: sticky;
+            display: flex;
+            flex-direction: column;
+            top: 0;
+    
+            .right-s-background {
+                background-image: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+                background-size: 40%;
+                padding-bottom: 70px;
+                width: 300px;
+    
+                .right-s-box {
                     display: flex;
                     flex-direction: column;
+                    justify-content: center;
                     align-items: center;
-                    border-radius: 10px;
-                    width: 250px;
-
-                    img {
-                        width: 129px;
-                        height: 163px;
-                        object-fit: contain;
-                        background-color: white;
-                        border-radius: 99px;
-                    }
-
-                    p {
-                        margin-bottom: 0px;
-                        margin-top: 10px;
-                        margin-left: 10px;
-                        margin-right: 10px;
-                        font-size: 15px;
-                    }
-
-                    .right-s-info {
-                        padding-bottom: 25px;
-                        margin-top: 25px;
-
-                        span {
-                            font-weight: bold;
+                    margin-top: 120px;
+    
+                    .right-s-text {
+                        background-color: #F2FFEA;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        border-radius: 10px;
+                        width: 250px;
+    
+                        img {
+                            width: 129px;
+                            height: 163px;
+                            object-fit: contain;
+                            background-color: white;
+                            border-radius: 99px;
                         }
-                    }
-                }
-            }
-        }
-    }
-
-    .left-s-content {
-        margin-left: 0px;
-        margin-right: 0px;
-        margin-top: 130px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-        .new-posts-content {
-
-            h2 {
-                font-size: 65px;
-            }
-
-            .new-posts {
-
-                .post-block {
-
-                    .post-block-textbox {
-                        
-                        h2 {
-                            font-size: 20px;
+    
+                        p {
+                            margin-bottom: 0px;
+                            margin-top: 10px;
+                            margin-left: 10px;
+                            margin-right: 5px;
+                            font-size: 15px;
+                        }
+    
+                        .right-s-info {
+                            width: 100%;
+                            padding-bottom: 25px;
+                            margin-top: 25px;
+    
+                            span {
+                                font-weight: bold;
+                            }
                         }
                     }
                 }
@@ -158,3 +152,40 @@ body::before, body::after {
         }
     }
 }
+
+
+
+
+/*
+#wrapper, #carousel {
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+#wrapper {
+    display: flex;
+    flex-direction: row;
+    max-width: 1200px;
+    align-items: center;
+
+    i {
+        background-color: pink;
+        height: 35px;
+        width: 35px;
+        text-align: center;
+        line-height: 35px;
+        border-radius: 99px;
+        cursor: pointer;
+        font-size: 25px;
+        color: #162D06;
+    }
+}
+
+#wrapper i:first-child{
+    margin-left: 20px;
+}
+#wrapper i:last-child{
+    margin-right: 20px;
+}
+
+*/
