--- a/CSS/admin-page.css
+++ b/CSS/admin-page.css
@@ -1,58 +1,225 @@
 body {
     background-color: #F2FFEA;
     width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
 
     color: #162D06;
 }
 
-.welcome-logo {
+body::before, body::after {
+    content: '';
+    display: table;
+    clear: both;
+}
 
-    background-image: linear-gradient(to bottom, rgba(242, 255, 234, 0.75), rgba(242, 255, 234, 0.75)),url(/MEDIA/background/backgroundleafes.png);
-    background-size: 22%;
-    width: 100%;
-    height: 100vh;
+.main-content {
+
+    background-color: #F2FFEA;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
 
-    .welcome-background {
+    .un-scroll-content {
+
+        position: sticky;
+
+        overflow-x: hidden;
+        overflow-y: hidden;
+    
+        min-height: 100vh;
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .framed-logo {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-
-        .frame {
-            position: absolute;
-            width: 1000px;
-            height: 685px;
-        }
-
-        .logo-inside-frame {
+        top: 0;
+        right: 0;
+        left: 100%;
+        min-width: 300px;
+        margin-right: 0px;
+        background-color: #d5eac7;
+    
+        .right-s-content {
+    
+            height: 100vh;
+            position: sticky;
             display: flex;
             flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-color: #F7FFF2;
-            width: 875px;
-            height: 575px;
-            border-radius: 10px;
+            top: 0;
+    
+            .right-s-background {
+                background-image: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+                background-size: 40%;
+                padding-bottom: 70px;
+                width: 300px;
+                height: 100vh;
+    
+                .right-s-box {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    margin-top: 120px;
+    
+                    .right-s-text {
+                        background-color: #F2FFEA;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        border-radius: 10px;
+                        width: 250px;
+                        height: 80vh;
 
-            .inside {
+                        h2 {
+                            text-align: center;
+                        }
+    
+                        img {
+                            width: 129px;
+                            height: 163px;
+                            object-fit: contain;
+                            background-color: white;
+                            border-radius: 99px;
+                            margin-bottom: 50px;
+                        }
+
+                        .admin-button {
+                            padding: 10px;
+                            border-radius: 10px;
+                            margin-top: 10px;
+                            text-decoration: none;
+                            color: #162D06;
+                            font-weight: bold;
+                            width: 200px;
+                            box-shadow: 2px 2px 7px 2px rgba(2, 57, 11, 0.306);
+                        }
+
+                        #create-button {
+                            background-color: #9AE5B5;
+                            &:hover {
+                                transform: scale(1.1);
+                                transition: 0.2s;
+                                color: #F2FFEA;
+                                background-color: #2c8a3f;
+                            }
+                        }
+                        #update-button {
+                            background-color: #FFD4D4;
+
+                            &:hover {
+                                transform: scale(1.1);
+                                transition: 0.2s;
+                                color: #F2FFEA;
+                                background-color: #ff9191;
+                            }
+                        }
+                        #delete-button {
+                            background-color: #EE4444;
+                            &:hover {
+                                transform: scale(1.1);
+                                transition: 0.2s;
+                                color: #F2FFEA;
+                                background-color: #8e1515;
+                            }
+                        }
+                        #loggout-button {
+                            margin-top: 50px;
+                            background-color: #E4F4D9;
+                            &:hover {
+                                transform: scale(1.1);
+                                transition: 0.2s;
+                                color: #F2FFEA;
+                                background-color: #162D06;
+                            }
+                        }
+    
+                        .right-s-info {
+                            margin-left: 30px;
+                            width: 100%;
+                            padding-bottom: 25px;
+                            margin-top: 90px;
+    
+                            span {
+                                font-weight: bold;
+                            }
+
+                            #lastPosted, #totalPosts {
+                                font-weight: 400;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    .all-blogs {
+
+        margin-top: 90px;
+        margin-left: 7%;
+        margin-right: 3.5%;
+
+        .blog-post {
+            background-color: #F1F8F3;
+            height: 590px;
+            width: 350px;
+            border-radius: 10px;
+            box-shadow: 2px 2px 7px 2px rgba(2, 57, 11, 0.306);
+
+            img {
+                height: 400px;
+                width: 350px;
+                object-fit: cover;
+                border-radius: 10px 10px 0px 0px;
+            }
+
+            .post-textbox {
                 display: flex;
                 flex-direction: column;
-                gap: 25px;
-                position: absolute;
+                justify-content: space-between;
+                align-items: center;
+                height: 190px;
+                margin-left: 5px;
+                margin-right: 5px;
+
+                .title {
+                    font-size: 22px;
+                }
+
+                .published {
+                    opacity: 75%;
+                    font-size: 14px;
+                }
             }
-    
         }
+
+        .blog-post:hover {
+            background-color: white;
+            transition: 0.25s;
+
+            img {
+                height: 475px;
+                transition: ease-in-out 0.25s;
+            }
+
+            .post-textbox {
+                transition: 0.25s;
+
+                height: 115px;
+
+                .title {
+                    font-size: 26px;
+                }
+
+                .published {
+                    display: none;
+                }
+            }
+        }
+
+        .blog-link {
+            text-decoration: none;
+            color: #162D06;
+        }
+
     }
 
 }
