--- a/CSS/index.css
+++ b/CSS/index.css
@@ -81,7 +81,7 @@ body::before, body::after {
         overflow-x: hidden;
         overflow-y: hidden;
     
-        min-height: 100vh;
+        height: 100vh;
         position: sticky;
         display: flex;
         flex-direction: column;
@@ -150,6 +150,55 @@ body::before, body::after {
                 }
             }
         }
+    }
+
+    .scroll-content {
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+
+        .newly-posted-container {
+
+            color: #162D06;
+            margin-top: 130px;
+
+            h2 {
+                font-size: 55px;
+            }
+
+            .newly-posted {
+
+                display: flex;
+                flex-direction: row;
+
+                .new-post {
+                    background-color: pink;
+                    border-radius: 10px;
+                    height: 600px;
+                    width: 315px;
+    
+                    .blog-link {
+                        text-decoration: none;
+                        color: #162D06;
+                    }
+    
+                    img {
+                        width: 315px;
+                        height: 420px;
+                        object-fit: cover;
+                        border-radius: 10px 10px 0px 0px;
+                    }
+
+                    h2 {
+                        font-size: 20px;
+                    }
+                }
+            }
+        }
+
     }
 
 }
