edited the About Me side
Added JS so every HTMl page will have the updated total post and last posted info

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -142,6 +142,10 @@ body::before, body::after {
                             padding-bottom: 25px;
                             margin-top: 25px;
     
+                            #lastPosted, #totalPosts {
+                                font-weight: 400;
+                            }
+                            
                             span {
                                 font-weight: bold;
                             }
