--- a/CSS/blog-post-detail.css
+++ b/CSS/blog-post-detail.css
@@ -49,13 +49,53 @@ body::before, body::after {
                 background-size: 40%;
                 padding-bottom: 70px;
                 width: 300px;
+
+                .gobackbutton {
+                    margin-top: 110px;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    width: 250px;
+                    margin-left: 25px;
+
+                    a {
+                        padding: 7px;
+                        padding-right: 10px; 
+                        padding-left: 10px;
+                        background-color: #162d06;
+                        border-radius: 10px;
+
+                        color: #F2FFEA;
+                        text-decoration: none;
+
+                        font-size: 14px;
+
+                        i {
+                            display: none;
+                            margin-right: 7px;
+                            font-size: 13px;
+                        }
+                    }
+
+                    &:hover {
+                        a {
+                            transform: scale(1.2);
+                            transition: 0.25s;
+                        } 
+
+                        i {
+                            transition: 0.25s;
+                            display: inline;
+                        }
+                    }
+                }
     
                 .right-s-box {
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
                     align-items: center;
-                    margin-top: 120px;
+                    margin-top: 10px;
     
                     .right-s-text {
                         background-color: #F2FFEA;
@@ -101,12 +141,33 @@ body::before, body::after {
     }
 
     .scroll-content {
-
-        margin-top: 130px;
-        margin-left: 7%;
+        width: 100%;
+        margin-top: 80px;
+        margin-left: -8px;
 
         .blog-detail {
 
+            width: 100%;
+            background-color: pink;
+
+            .blog-post-detail {
+
+                width: 100%;
+                img {
+                    width: 1400px;
+                    height: 500px;
+                    object-fit: cover;
+                }
+
+                .title, .second-title, .content, .published {
+                    margin-left: 7%;
+                    margin-right: 3.5%
+                }
+
+                .second-title {
+                    margin-bottom: 100px;
+                }
+            }
         }
     }
 
