--- a/CSS/Admin/blog-post.css
+++ b/CSS/Admin/blog-post.css
@@ -147,8 +147,12 @@ body::before, body::after {
 
         .admin-blog-detail {
 
-            width: 100%;
+            margin-top: 75px;
             background-color: pink;
+            margin-left: 7%;
+            margin-right: 3.5%;
+            display: flex;
+            flex-direction: column;
 
             .blog-post-detail {
 
