--- a/CSS/Admin/admin-login.css
+++ b/CSS/Admin/admin-login.css
@@ -48,8 +48,49 @@ body {
             .login-form {
                 display: flex;
                 flex-direction: column;
-                gap: 50px;
+                gap: 30px;
                 position: absolute;
+
+                .login-form-username, .login-form-password {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
+
+                    color: #162D06;
+
+                    input {
+                        background-color: white;
+                        border-radius: 10px;
+                        padding: 10px;
+                        border: none;
+                        font-size: 12px;
+
+                        color: #162D06;
+
+                        box-shadow: 2px 2px 10px 2px rgba(2, 101, 19, 0.154);
+                    }
+                }
+
+                .login-button {
+                    margin-top: 75px;
+                    background-color: pink;
+                    box-shadow: 2px 2px 10px 2px rgba(2, 101, 19, 0.154);
+                    border-radius: 99px;
+                    padding: 5px;
+                    border: none;
+
+                    color: #162D06;
+                    font-weight: bold;
+
+                    font-size: 15px;
+
+                    &:hover {
+                        transform: scale(1.1);
+                        transition: 0.25s;
+
+                        font-size: 17px;
+                    }
+                }
             }
     
         }
