--- a/CSS/index.css
+++ b/CSS/index.css
@@ -75,7 +75,16 @@ body::before, body::after {
                 font-size: 25px;
             }
             h1 {
-                font-size: 35px;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                font-size: 40px;
+
+                img {
+                    width: 100px;
+                    height: 55px;
+                }
             }
         }
     }
