--- a/CSS/Admin/blog-post.css
+++ b/CSS/Admin/blog-post.css
@@ -109,6 +109,40 @@ body::before, body::after {
                         width: 250px;
                         min-height: 500px;
 
+                        .blog-post-buttons {
+
+                            .save-button {
+                                background-color: #9AE5B5;
+                                border-radius: 10px;
+                                padding: 4px;
+                                border: none;
+                                width: 120px;
+                                cursor: pointer;
+                                font-weight: bold;
+
+                                &:hover {
+                                    transition: 0.25s;
+                                    transform: scale(1.1);
+                                    box-shadow: 2px 2px 10px 2px rgba(0, 42, 7, 0.154);
+                                }
+                            }
+                            .delete-button {
+                                background-color: #EE4444;
+                                border-radius: 10px;
+                                padding: 4px;
+                                border: none;
+                                width: 120px;
+                                cursor: pointer;
+                                font-weight: bold;
+
+                                &:hover {
+                                    transition: 0.25s;
+                                    transform: scale(1.1);
+                                    box-shadow: 2px 2px 10px 2px rgba(0, 42, 7, 0.154);
+                                }
+                            }
+                        }
+
                         h2 {
                             margin-bottom: -50px;
                         }
