making a better design

--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,5 +1,5 @@
 footer {
-    background-color: #FFB9B9;
+    background-color: #F39994;
     bottom: 0px;
     margin-bottom: -50px;
     margin-left: -8px;
