--- a/CSS/Admin/admin-login.css
+++ b/CSS/Admin/admin-login.css
@@ -8,6 +8,143 @@ body {
 
 .welcome-logo {
 
+    /*background-image: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65)),url(/MEDIA/background/backgroundleafes.png);*/
+    background-color: #E4F4D9;
+    background-size: 13.5%;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .welcome-background {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        .leafy-background {
+            position: absolute;
+            width: 100vh;
+            height: 100%;
+            rotate: -90deg;
+            right: 0;
+            margin-right: -8px;
+
+            img {
+                height: 100vh;
+                width: 100vh;
+                object-fit: cover;
+                object-position: left;
+            }
+        }
+        .leafy-background2 {
+            position: absolute;
+            width: 100vh;
+            height: 100%;
+            rotate: 90deg;
+            left: 0;
+            margin-left: -8px;
+
+            img {
+                height: 100vh;
+                width: 100vh;
+                object-fit: cover;
+                object-position: left;
+                transform: scaleX(-1);
+            }
+        }
+        .leafy-background3 {
+            position: absolute;
+            width: 100%;
+            height: 90%;
+            bottom: 0;
+            margin-bottom: -8px;
+
+            img {
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+            }
+        }
+    }
+
+    .framed-logo {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: -90px;
+        width: 100%;
+        height: 100%;
+
+        .logo-inside-frame {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            width: 100%;
+            /*background-color: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65));*/
+
+    
+            .login-form {
+
+                display: flex;
+                flex-direction: column;
+                gap: 30px;
+                position: absolute;
+
+                .login-form-username, .login-form-password {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
+
+                    color: #162D06;
+
+                    input {
+                        background-color: white;
+                        border-radius: 10px;
+                        padding: 10px;
+                        border: none;
+                        font-size: 12px;
+
+                        color: #162D06;
+
+                        box-shadow: 2px 2px 10px 2px rgba(2, 101, 19, 0.154);
+                    }
+                }
+
+                .login-button {
+                    margin-top: 75px;
+                    background-color: #F39994;
+                    box-shadow: 2px 2px 10px 2px rgba(2, 101, 19, 0.154);
+                    border-radius: 10px;
+                    padding: 5px;
+                    border: none;
+
+                    color: #162D06;
+                    font-weight: bold;
+
+                    font-size: 15px;
+
+                    &:hover {
+                        transform: scale(1.1);
+                        transition: 0.25s;
+
+                        font-size: 17px;
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
+    }
+
+}
+
+/*
+.welcome-logo {
+
     background-image: linear-gradient(to bottom, rgba(242, 255, 234, 0.75), rgba(242, 255, 234, 0.75)),url(/MEDIA/background/backgroundleafes.png);
     background-size: 22%;
     width: 100%;
@@ -97,3 +234,4 @@ body {
     }
 
 }
+*/
