--- a/CSS/index.css
+++ b/CSS/index.css
@@ -15,8 +15,9 @@ body::before, body::after {
 
 .welcome-logo {
 
-    background-image: linear-gradient(to bottom, rgba(242, 255, 234, 0.75), rgba(242, 255, 234, 0.75)),url(/MEDIA/background/backgroundleafes.png);
-    background-size: 22%;
+    /*background-image: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65)),url(/MEDIA/background/backgroundleafes.png);*/
+    background-color: #E4F4D9;
+    background-size: 13.5%;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -31,8 +32,41 @@ body::before, body::after {
 
         .leafy-background {
             position: absolute;
+            width: 100vh;
+            height: 100%;
+            rotate: -90deg;
+            right: 0;
+            margin-right: -8px;
+
+            img {
+                height: 100vh;
+                width: 100vh;
+                object-fit: cover;
+                object-position: left;
+            }
+        }
+        .leafy-background2 {
+            position: absolute;
+            width: 100vh;
+            height: 100%;
+            rotate: 90deg;
+            left: 0;
+            margin-left: -8px;
+
+            img {
+                height: 100vh;
+                width: 100vh;
+                object-fit: cover;
+                object-position: left;
+                transform: scaleX(-1);
+            }
+        }
+        .leafy-background3 {
+            position: absolute;
             width: 100%;
-            margin-left: -15px;
+            height: 90%;
+            bottom: 0;
+            margin-bottom: -8px;
 
             img {
                 height: 100%;
@@ -48,10 +82,12 @@ body::before, body::after {
         justify-content: center;
         align-items: center;
         margin-top: -90px;
+        width: 100%;
+        height: 100%;
 
         .frame {
             position: absolute;
-            width: 1000px;
+            width: 980px;
             height: 600px;
         }
 
@@ -60,30 +96,33 @@ body::before, body::after {
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background-color: #F7FFF2;
-            width: 875px;
+            /*background-color: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65));*/
+            width: 850px;
             height: 500px;
             border-radius: 10px;
     
             img {
-                width: 594px;
-                height: 175px;
+                width: 600px;
+                height: 250px;
                 object-fit: contain;
             }
 
             h2 {
-                font-size: 25px;
+                font-size: 30px;
             }
+
             h1 {
+                margin-top: -5px;
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
                 align-items: center;
-                font-size: 40px;
+                font-size: 50px;
+                color: #F39994;
 
                 img {
-                    width: 100px;
-                    height: 55px;
+                    width: 200px;
+                    height: 75px;
                 }
             }
         }
@@ -92,6 +131,9 @@ body::before, body::after {
 }
 
 .main-content {
+
+    z-index: 2;
+    box-shadow: 10px 1px 50px 5px rgba(2, 101, 19, 0.154);
 
     background-color: #F2FFEA;
     display: flex;
@@ -193,7 +235,7 @@ body::before, body::after {
         .newly-posted-container {
 
             color: #162D06;
-            margin-top: 130px;
+            margin-top: 75px;
 
             h2 {
                 font-size: 55px;
@@ -202,6 +244,7 @@ body::before, body::after {
             .newly-posted-carousel {
                 width: 1200px;
                 overflow-x: scroll;
+                margin-top: -50px;
 
                 .newly-posted {
 
@@ -215,11 +258,12 @@ body::before, body::after {
                     .new-post {
 
                         background-color: #f6fef2;
+                        box-shadow: 5px 10px 10px 2px rgba(2, 101, 19, 0.154);
+
                         border-radius: 10px;
                         height: 600px;
                         width: 315px;
-                        box-shadow: 5px 10px 10px 2px rgba(2, 101, 19, 0.154);
-        
+
                         .blog-link {
                             text-decoration: none;
                             color: #162D06;
@@ -297,28 +341,71 @@ body::before, body::after {
                 flex-direction: row;
                 flex-wrap: wrap;
                 justify-content: flex-start;
-                gap: 25px;
+                gap: 2.5%;
 
                 .all-post-blog {
-                    background-color: pink;
+                    background-color: #f6fef2;
+                    box-shadow: 5px 10px 10px 2px rgba(2, 101, 19, 0.154);
+
                     border-radius: 10px;
-                    height: 600px;
-                    width: 315px;
+                    height: 425px;
+                    width: 250px;
+                    margin-bottom: 2.5%;
     
-                    .blog-link {
+                    a {
                         text-decoration: none;
                         color: #162D06;
                     }
+
+                    .post-textbox {
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+                        align-items: center;
+                        text-align: center;
+
+                        margin-top: 10px;
+                        height: 140px;
+                        margin-left: 5px;
+                        margin-right: 5px;
+                    }
+
+                    .published {
+                        opacity: 75%;
+                        font-size: 13px;
+                    }
     
                     img {
-                        width: 315px;
-                        height: 420px;
+                        width: 250px;
+                        height: 280px;
                         object-fit: cover;
                         border-radius: 10px 10px 0px 0px;
                     }
 
                     h2 {
-                        font-size: 20px;
+                        font-size: 16px;
+                    }
+                }
+                .all-post-blog:hover {
+                    background-color: white;
+                    transition: 0.45s;
+
+                    .post-textbox {
+                        margin-top: -5px;
+                        height: 50px;
+                    }
+    
+                    img {
+                        height: 325px;
+                        transition: 0.35s;
+                    }
+
+                    h2 {
+                        font-size: 17px;
+                    }
+
+                    .published {
+                        display: none;
                     }
                 }
             }
