--- a/CSS/all-blog-posts.css
+++ b/CSS/all-blog-posts.css
@@ -105,9 +105,15 @@ body::before, body::after {
         width: 100%;
         margin-top: 130px;
 
+        h1 {
+            font-size: 50px;
+            margin-bottom: 0px;
+        }
+
         .all-blogs {
 
             margin-top: 90px;
+            margin-bottom: 150px;
             margin-left: 7%;
             margin-right: 25px;
             display: flex;
