--- a/CSS/header.css
+++ b/CSS/header.css
@@ -30,8 +30,8 @@ nav {
     }
 
     .logo {
-        width: 100%;
-        height: 100%;
+        width: 124px;
+        height: 90px;
 
         img {
             width: 124px;
@@ -40,13 +40,20 @@ nav {
         }
     }
 
-    li {
+    ul {
         list-style: none;
         display: flex;
         flex-direction: row;
-        justify-content: flex-start;
-        align-items: center;
         text-align: center;
+
+        height: 55px;
+    }
+
+    li {
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
         a {
             width: 65px;
