--- a/CSS/Admin/blog-post.css
+++ b/CSS/Admin/blog-post.css
@@ -195,30 +195,57 @@ body::before, body::after {
         margin-left: -8px;
 
         .admin-blog-detail {
-
-            margin-top: 75px;
-            margin-left: 9%;
-            margin-right: 3.5%;
             display: flex;
             flex-direction: column;
-            width: 1200px;
             margin-bottom: 100px;
 
-            .title-container, .body-container, .media-container, .tags-container {
+            .title-container, .body-container, .tags-container {
+                margin-left: 9%;
+                margin-right: 3.5%;
 
                 input {
                     width: 700px;
                 }
+            }
 
-                img {
+            .media-container {
+
+                h3 {
+                    margin-left: 9%;
+                    margin-right: 3.5%;
+                }
+
+                input {
+                    margin-left: 9%;
+                    margin-right: 3.5%;
                     width: 700px;
+                }
+
+                .image-preview {
+                    width: 100%;
+                    margin-left: 0px;
+                    margin-right: 0px;
+                    height: 500px;
+                    margin-top: 0px;
+    
+                }
+    
+                img {
+                    width: 100%;
+                    height: 100%;
                     object-fit: cover;
-                    height: 450px;
-                    border-radius: 10px;
+                    border-radius: 0px;
                     margin-top: 25px;
                 }
             }
 
+            .title-container {
+                margin-bottom: 50px;
+                margin-top: 50px;
+            }
+            .body-container {
+                margin-bottom: 50px;
+            }
         }
     }
 
