--- a/CSS/index.css
+++ b/CSS/index.css
@@ -155,7 +155,7 @@ body::before, body::after {
         left: 100%;
         min-width: 300px;
         margin-right: 0px;
-        background-color: #d5eac7;
+        background-color: #F3B0AC;
     
         .right-s-content {
     
@@ -166,7 +166,7 @@ body::before, body::after {
             top: 0;
     
             .right-s-background {
-                background-image: linear-gradient(to bottom, rgba(228, 244, 217, 0.65), rgba(228, 244, 217, 0.65)),url(/MEDIA/background/backgroundleafes.png);
+                background-image: linear-gradient(to bottom, rgb(243, 176, 172, 0.250), rgba(243, 176, 172, 0.250)),url(/MEDIA/background/backgroundleafes-white.png);
                 background-size: 40%;
                 padding-bottom: 70px;
                 width: 300px;
@@ -179,7 +179,8 @@ body::before, body::after {
                     margin-top: 120px;
     
                     .right-s-text {
-                        background-color: #F2FFEA;
+                        background-color: #ffecf0;
+                        border: 1px solid #F3B0AC;
                         display: flex;
                         flex-direction: column;
                         align-items: center;
@@ -187,11 +188,12 @@ body::before, body::after {
                         width: 250px;
     
                         img {
-                            width: 129px;
+                            width: 163px;
                             height: 163px;
                             object-fit: contain;
                             background-color: white;
                             border-radius: 99px;
+                            border: 1px solid #F3B0AC;
                         }
     
                         p {
@@ -239,6 +241,10 @@ body::before, body::after {
 
             h2 {
                 font-size: 55px;
+
+                span {
+                    color: #F39994;
+                }
             }
 
             .newly-posted-carousel {
